refactored CNpcPool::OnPacket handling to it's own package